<resources>
    <string name="app_name">PlayerDemo</string>
    <string name="switch_activity">switch_activity</string>
    <string name="pause">Pause</string>
    <string name="todo">TODO</string>
    <string name="playing">Playing</string>
    <string name="image">image</string>
    <string name="return_to_home">return_to_home</string>
    <string name="play_list">Play List</string>
    <string name="example_activity">Example_Activity</string>
    <string name="show">show</string>
    <string name="title_activity_media_provider">MediaProviderActivity</string>
</resources>
