<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_activity"
        android:visibility="visible"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/show"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/button_2home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_home" />

    <Button
        android:id="@+id/button_exam_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_list" />
</LinearLayout>